[gd_scene load_steps=13 format=3 uid="uid://hmn4bt7yybar"]

[ext_resource type="Texture2D" uid="uid://es8xunfugjeo" path="res://assets/button_rectangle_gradient.svg" id="1_1bvp3"]
[ext_resource type="Script" uid="uid://ccwnog3lhpihc" path="res://main.gd" id="1_7mycd"]
[ext_resource type="PackedScene" uid="uid://bq3h4brp1rdro" path="res://ui.tscn" id="1_lquwl"]
[ext_resource type="Texture2D" uid="uid://dtj77b30ln75y" path="res://assets/button_rectangle_depth_gloss.svg" id="2_lquwl"]
[ext_resource type="Texture2D" uid="uid://daxehd8ahtjxj" path="res://assets/button_rectangle_depth_border.svg" id="3_7mycd"]
[ext_resource type="LabelSettings" uid="uid://pp2vmewtv5ni" path="res://answer_button_settings.tres" id="4_272bh"]
[ext_resource type="PackedScene" uid="uid://cyfugulso83tk" path="res://scene_transition_rect.tscn" id="7_272bh"]

[sub_resource type="SystemFont" id="SystemFont_272bh"]
font_weight = 500

[sub_resource type="LabelSettings" id="LabelSettings_1bvp3"]
font = SubResource("SystemFont_272bh")
font_size = 24
outline_size = 2
outline_color = Color(0, 0, 0, 1)
shadow_size = 5
shadow_color = Color(0, 0, 0, 0.298039)
shadow_offset = Vector2(2, 3)

[sub_resource type="Animation" id="Animation_5vw27"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_272bh"]
resource_name = "fade"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kek77"]
_data = {
&"RESET": SubResource("Animation_5vw27"),
&"fade": SubResource("Animation_272bh")
}

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7mycd")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.168627, 0.65098, 0.858824, 1)

[node name="UI" parent="." instance=ExtResource("1_lquwl")]

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="CenterContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/GridContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 20

[node name="Question" type="Label" parent="CenterContainer/GridContainer/MarginContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "You Shouldn't See This"
label_settings = SubResource("LabelSettings_1bvp3")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Multichoice" type="GridContainer" parent="CenterContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 50
columns = 2

[node name="Button1" type="TextureButton" parent="CenterContainer/GridContainer/Multichoice"]
layout_mode = 2
texture_normal = ExtResource("1_1bvp3")
texture_pressed = ExtResource("3_7mycd")
texture_hover = ExtResource("2_lquwl")
texture_disabled = ExtResource("1_1bvp3")

[node name="Answer" type="Label" parent="CenterContainer/GridContainer/Multichoice/Button1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Answer"
label_settings = ExtResource("4_272bh")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Button2" type="TextureButton" parent="CenterContainer/GridContainer/Multichoice"]
layout_mode = 2
texture_normal = ExtResource("1_1bvp3")
texture_pressed = ExtResource("3_7mycd")
texture_hover = ExtResource("2_lquwl")
texture_disabled = ExtResource("1_1bvp3")

[node name="Answer" type="Label" parent="CenterContainer/GridContainer/Multichoice/Button2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Answer"
label_settings = ExtResource("4_272bh")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Button3" type="TextureButton" parent="CenterContainer/GridContainer/Multichoice"]
layout_mode = 2
texture_normal = ExtResource("1_1bvp3")
texture_pressed = ExtResource("3_7mycd")
texture_hover = ExtResource("2_lquwl")
texture_disabled = ExtResource("1_1bvp3")

[node name="Answer" type="Label" parent="CenterContainer/GridContainer/Multichoice/Button3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Answer"
label_settings = ExtResource("4_272bh")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Button4" type="TextureButton" parent="CenterContainer/GridContainer/Multichoice"]
layout_mode = 2
texture_normal = ExtResource("1_1bvp3")
texture_pressed = ExtResource("3_7mycd")
texture_hover = ExtResource("2_lquwl")
texture_disabled = ExtResource("1_1bvp3")

[node name="Answer" type="Label" parent="CenterContainer/GridContainer/Multichoice/Button4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Answer"
label_settings = ExtResource("4_272bh")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="FeedbackSound" type="AudioStreamPlayer2D" parent="."]

[node name="SceneTransitionRect" parent="." instance=ExtResource("7_272bh")]
layout_mode = 1

[node name="UIFade" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_kek77")
}
autoplay = "fade"

[connection signal="pressed" from="CenterContainer/GridContainer/Multichoice/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/Multichoice/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/Multichoice/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/Multichoice/Button4" to="." method="_on_button_4_pressed"]
